# arrow-data-contract

./: .gitignore  DataContract.py  README.md  compare.py  main.py  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: code_coverage.yml  docs_upload_development.yml  docs_upload_release.yml  main.yml  main2.yml
0.0.1/: 404.html
0.0.1/search/: search_index.json
0.0.2/: 404.html  index.html
Repo1/: main.py
Repo1/DATA_CONTRACTS/PRODUCER/: ANIMALS.parquet  ANIMALS.py
Repo2/: DataContract.py  all_data_contracts.py
Repo2/DATA_CONTRACTS/CONSUMER/: ANIMALS.parquet  ANIMALS.py
development/: 404.html  gen_ref_pages.py  index.html  objects.inv
development/Design/: index.html
development/Getting Started/: index.html
development/Roadmap/: index.html
development/getting_started/: index.html
development/reference/SUMMARY/: index.html
development/reference/adc/: index.html
development/reference/adc/catalog/: index.html
development/reference/adc/catalog_repository/: index.html
development/reference/adc/data_contract/: index.html
development/reference/adc/data_contract_compatibility/: index.html
development/reference/adc/metadata/: index.html
development/reference/adc/schema_compatibility/: index.html
development/search/: search_index.json
docs/: Design.md  Getting Started.md  Roadmap.md  index.md
src/adc/: ADCMetadata.py  CatalogRepository.py  DataContract.py  DataContractCompatibility.py  Metadata.py  SchemaCompatibility.py  ServiceCatalog.py  __init__.py  catalog_repository.py  data_contract.py  data_contract_compatibility.py  schema_compatibility.py  service_catalog.py
src/adc/catalog/: __init__.py  catalog_repository.py  catalog_repository_backend_local.py  catalog_repository_entry.py
src/adc/metadata/: __init__.py  direction.py  field_test_metadata.py  table_metadata.py
tests/: conftest.py  test_ADCMetadata.py  test_DataContract.py  test_Metadata.py  test_SchemaCompatibility.py  test_data_contract_compatibility.py  test_foo.py
tests/CatalogRepository/: test_upload.py
tests/CatalogRepository/Repo1/: CR_repo_1_contract_1.py  contract_1.py
tests/CatalogRepository/Repo2/: CR_repo_2_contract_1.py  contract_1.py
tests/CatalogRepository/Repo3/: CR_repo_3_contract_1.py  contract_1.py
tests/ServiceCatalog/: test_fetching.py  test_loading.py
tests/ServiceCatalog/Repo1_duplicated/: SC_repo_1_duplicated_contract_1.py  SC_repo_1_duplicated_contract_2.py  contract_1.py
tests/test_ADCMetadata/: test_creation.py  test_on_arrow_schema.py
tests/test_DataContract.py/: test_1.py  test_2.py
(+9 files in other folders)
