[tool.poetry]
name = "arrow-data-contract"
version = "0.0.1"
description = ""
authors = ["Bruno Murino"]
readme = "README.md"
packages = [ { include = "adc", from = "src"  }]


[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^12.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
mkdocs-material = "^9.1.17"
pytest-cov = "^4.1.0"
mike = "^1.1.2"
poethepoet = "^0.20.0"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
    "tests",
]

[tool.poe.tasks]
test = "pytest -vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
