[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "arrow-data-contract"
version = "0.0.1"
description = ""
authors = ["Bruno Murino"]
readme = "README.md"
packages = [ { include = "adc", from = "src"  }]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyarrow = "^12.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
mkdocs-material = "^9.1.17"
mike = "^1.1.2"
poethepoet = "^0.20.0"
pyright = "^1.1.315"
coverage = "^7.2.7"


[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]


[tool.poe.tasks]
test = "coverage run -m pytest -vv"
lint-fix = "black ."
coverage = "coverage lcov"
coverage_html = "coverage html"


[tool.pyright]
include = ["src"]
typeCheckingMode = 'basic'
reportMissingImports = true
reportMissingTypeStubs = false
